Handle similar ids rest exception